# auto-i18n-py-experiment

./: .gitignore  README.md  build.sh  chineseReplace.py  main.ipynb  parser.py  pyproject.toml
src_backup/: App.vue  manifest.json  pages.json  uni.scss
src_backup/api/: index.js  navigationbar.js  other.js  plugins.js  requset.js  uploadFile.js
src_backup/common/data/: addons.js  texts.js
src_backup/common/interface/: anticounterfeiting.js  barrage.js  blockchain.js  consumercard.js  coupon.js  course.js  cps.js  credential.js  festivalcare.js  followgift.js  friendster.js  giftvoucher.js  goods.js  integral.js  invoice.js  level.js  live.js  lucklyspell.js  member.js  message.js  microshop.js  mplive.js  order.js  prize.js  seckill.js  smallshop.js  smashegg.js  store.js  supplier.js  thingcircle.js  wheelsurf.js
src_backup/common/styles/: app.scss  var.scss
src_backup/common/utils/: comp-path.js  constant.js  i18n.js  stringify.js
src_backup/components/custom/: form-group.vue  (+2 more)
src_backup/mixins/: focusout.js  load-list.js  price-text.js  property.js  socket.js  valid-pay-password.js  waterfall.js
src_backup/pay/: wallet.vue
src_backup/router/: routes.js
src_backup/store/: basic.js  index.js
test_files/: chineseReplace.py  config.js  ext.json  main.js
test_files/api/: media.js  navigate.js  prompt.js  storage.js  system.js
test_files/mixins/: bind-mobile.js  bonus.js  index.js  navbar-style.js  pages.js  reform-load.js  share.js  thingcircle.js
test_files/pay/: level.vue  membercard.vue  pay.js  payment.vue
test_files/router/: index.js
(+285 files in other folders)
